translate returned info to russian

--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<SportsStore.Domain.Entities.Product>
 
 @{
-    ViewBag.Title = "Products";
+    ViewBag.Title = "Изделия";
 }
 
-<h2>List</h2>
+<h2>Список закупок</h2>
 
 @foreach (var p in Model)
 {
