--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SportsStore.Domain.Entities.Product>
+﻿@model SportsStore.WebUI.Models.ProductsListViewModel
 
 @{
     ViewBag.Title = "Изделия";
@@ -6,7 +6,7 @@
 
 <h2>Список закупок</h2>
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 {
     <div class="item">
         <h3> @p.Name</h3>
@@ -14,3 +14,7 @@
         <h4>@p.Price.ToString("c")</h4>
     </div>
 }
+
+<div class="pager" >
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new {page = x}))
+</div>
