--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     </div>
 
     <div id="categories">
-        Позже здесь появятся категории...
+        @{Html.RenderAction("Menu", "Nav");}
     </div>
 
     <div id="content">
