--- a/SportsStore.WebUI/Views/Nav/Menu.cshtml
+++ b/SportsStore.WebUI/Views/Nav/Menu.cshtml
@@ -1,17 +1,26 @@
 ﻿@model IEnumerable<String>
-@Html.ActionLink("Home", "List", "Product")
-
-@foreach (var link in Model)
+<nav class="navbar navbar-default">
+<div class="navbar-header">
+@Html.ActionLink("Home", "List", "Product", new{}, new
 {
-    @Html.RouteLink(link, new
+    @class="navbar-brand"
+})
+    </div>
+<ul class="nav navbar-nav">
+    @foreach (var link in Model)
     {
-        controller = "Product",
-        action = "List",
-        category = link,
-        page = 1
-    },
-    new
-    {
-        @class = link == ViewBag.SelectedCategory ? "selected" : null
-    })
-}
+    
+        string classes = link == ViewBag.SelectedCategory ? "active" : null;
+    
+        <li class="@classes" > 
+            @Html.RouteLink(link, new
+            {
+                controller = "Product",
+                action = "List",
+                category = link,
+                page = 1
+            })
+        </li>
+    }
+</ul>
+</nav>
