--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -11,6 +11,6 @@
     Html.RenderPartial("ProductSummary", p);
 }
 
-<div class="pager" >
+<ul class="pagination" >
     @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new {page = x, category = Model.CurrentCategory}))
-</div>
+</ul>
