--- a/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
@@ -8,7 +8,7 @@
     {
         @Html.HiddenFor(x => x.ProductID)
         @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-        <input type="submit" value="+ Положить в карзину"/>
+        <input type="submit" class="btn btn-info" value="+ Положить в карзину"/>
     }
     <h4>@Model.Price.ToString("c")</h4>
 </div>
