--- a/SportsStore.WebUI/Views/Cart/Index.cshtml
+++ b/SportsStore.WebUI/Views/Cart/Index.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewBag.Title = "Корзина закупок";
 }
-
+<div class="table-responsive">
 <h2>Содержимое корзины</h2>
-<table width="90%" align="center">
+<table width="90%" align="center" class="table table-striped">
     <thead>
         <tr>
             <th align="center">Штук</th>
@@ -27,7 +27,7 @@
                     {
                         @Html.Hidden("ProductId", line.Product.ProductID)
                         @Html.HiddenFor(x => x.ReturnUrl)
-                        <input class="actionButtons" type="submit" value="удалить из корзины"/>
+                        <input class="actionButtons btn btn-danger" type="submit" value="удалить из корзины"/>
                     }
                 </td>
             </tr>
@@ -42,6 +42,7 @@
         </tr>
     </tfoot>
 </table>
+    </div>
 <p align="center" class="actionButtons">
     <a href="@Model.ReturnUrl">Вернуться к прежнему списку изделий</a>
 </p>
