--- a/SportsStore.WebUI/Views/Nav/Menu.cshtml
+++ b/SportsStore.WebUI/Views/Nav/Menu.cshtml
@@ -1,26 +1,27 @@
 ﻿@model IEnumerable<String>
 <nav class="navbar navbar-default">
-<div class="navbar-header">
-@Html.ActionLink("Home", "List", "Product", new{}, new
-{
-    @class="navbar-brand"
-})
+   
+    <div class="navbar-header">
+        @Html.ActionLink("Главная", "List", "Product", new{}, new
+        {
+            @class="navbar-brand"
+        })
     </div>
-<ul class="nav navbar-nav">
-    @foreach (var link in Model)
-    {
+    <ul class="nav navbar-nav">
+        @foreach (var link in Model)
+        {
     
-        string classes = link == ViewBag.SelectedCategory ? "active" : null;
+            string classes = link == ViewBag.SelectedCategory ? "active" : null;
     
-        <li class="@classes" > 
-            @Html.RouteLink(link, new
-            {
-                controller = "Product",
-                action = "List",
-                category = link,
-                page = 1
-            })
-        </li>
-    }
-</ul>
+            <li class="@classes" > 
+                @Html.RouteLink(link, new
+                {
+                    controller = "Product",
+                    action = "List",
+                    category = link,
+                    page = 1
+                })
+            </li>
+        }
+    </ul>
 </nav>
