--- a/SportsStore.WebUI/Views/Nav/Menu.cshtml
+++ b/SportsStore.WebUI/Views/Nav/Menu.cshtml
@@ -2,9 +2,11 @@
 <nav class="navbar navbar-default">
    
     <div class="navbar-header">
-        @Html.ActionLink("Главная", "List", "Product", new{}, new
+        @Html.ActionLink(" ", "List", "Product", new{}, new
         {
-            @class="navbar-brand"
+            @class="navbar-brand",
+            id="menuHome"
+            
         })
     </div>
     <ul class="nav navbar-nav">
