--- a/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SportsStore.Domain.Entities.Product
 
-<div class="animated-product thumbnail col-md-4 col-xs-12 pull-left" style="margin: 8pt;">
+<div class="product animated-product thumbnail col-md-4 col-xs-12 pull-left ui-widget" style="margin: 8pt;">
     <h3>@Model.Name</h3>
     @Model.Description
     <div class="caption">
