--- a/SportsStore.WebUI/Content/Site.css
+++ b/SportsStore.WebUI/Content/Site.css
@@ -5,6 +5,21 @@
     background-color: #7fffd4;
     background-image: url(images/sports.png);
 }
+.product .btn {
+    cursor: pointer !important;   
+}
+
+.product :hover{
+    cursor: move;
+}
+#menuHome {
+    background-image: url(images/лого.png);
+    background-size: 80% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 200px;
+    height: 50px;
+}
 
 .container {
     background: #f0f8ff;
