--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
 
     <link href="~/Content/Site.css" type="text/css" rel="stylesheet" />
     <link href="~/Content/animations.css" type="text/css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-ui-1.11.4.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery-ui-1.11.4.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         //for header
         $(function () { $(".carousel").carousel({ interval: 3500, pause: "click" }); });
@@ -22,9 +24,9 @@
                 var imagePos = $(this).offset().top;
 
                 var topOfWindow = $(window).scrollTop();
-                if (imagePos < topOfWindow + 400) {
+                if (imagePos < topOfWindow + 450) {
                     $(this).removeClass("animated-product");
-                    $(this).addClass("slideUp");
+                    $(this).addClass("bigEntrance");
                 }
             });
         });
@@ -36,7 +38,7 @@
                     $cache.css({
                         'position': 'fixed',
                         'top': '150px',
-                        'right': '130px'
+                        'right': '110px'
                     });
                 else
                     $cache.css({
@@ -49,48 +51,49 @@
             fixDiv();
         });
     </script>
+    
 </head>
-<body>
-    <div class="container">
-        <div id="header" class="row page-header carousel">
-            <h1 class="text-center">Магазин спорт-товаров</h1>
+    <body>
+        <div class="container">
+            <div id="header" class="row page-header carousel">
+                <h1 class="text-center">Магазин спорт-товаров</h1>
 
-            @* Картинки в карусельке *@
-            <div class="carousel-inner">
-                <div class="active item">
-                    <img src="~/Content/images/барахло.jpg" style="width: 500px; height: 300px;" />
-                    <div class="carousel-caption">
-                        <h4>Широкий выбор</h4>
-                        <p>Всегда доступные изделия в любом количестве прийдутся Вам по вкусу.</p>
+                @* Картинки в карусельке *@
+                <div class="carousel-inner">
+                    <div class="active item">
+                        <img src="~/Content/images/барахло.jpg" style="width: 500px; height: 300px;" />
+                        <div class="carousel-caption">
+                            <h4>Широкий выбор</h4>
+                            <p>Всегда доступные изделия в любом количестве прийдутся Вам по вкусу.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <img src="~/Content/images/family.jpg" style="width: 500px; height: 300px;" />
-                    <div class="carousel-caption">
-                        <h4>Для всей семьи</h4>
-                        <p>Здесь Вы найдете товары, которые подойдут абсолютно всем.</p>
+                    <div class="item">
+                        <img src="~/Content/images/family.jpg" style="width: 500px; height: 300px;" />
+                        <div class="carousel-caption">
+                            <h4>Для всей семьи</h4>
+                            <p>Здесь Вы найдете товары, которые подойдут абсолютно всем.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <img src="~/Content/images/talants.jpg" style="width: 500px; height: 300px;" />
-                    <div class="carousel-caption">
-                        <h4>Откройте Ваши таланты</h4>
-                        <p>Мы помогаем нашим клиентам достичь их цели - стать активными и получать удовольствие.</p>
-                    </div>
+                    <div class="item">
+                        <img src="~/Content/images/talants.jpg" style="width: 500px; height: 300px;" />
+                        <div class="carousel-caption">
+                            <h4>Откройте Ваши таланты</h4>
+                            <p>Мы помогаем нашим клиентам достичь их цели - стать активными и получать удовольствие.</p>
+                        </div>
 
+                    </div>
                 </div>
+                @* Навигационные элементы *@
+                <a class="carousel-control left" href="#header" data-slide="prev">&lsaquo;</a>
+                <a class="carousel-control right" href="#header" data-slide="next">&rsaquo;</a>
             </div>
-            @* Навигационные элементы *@
-            <a class="carousel-control left" href="#header" data-slide="prev">&lsaquo;</a>
-            <a class="carousel-control right" href="#header" data-slide="next">&rsaquo;</a>
-        </div>
 
-        <div id="categories" class="row">
-            @{Html.RenderAction("Menu", "Nav");}
+            <div id="categories" class="row">
+                @{Html.RenderAction("Menu", "Nav");}
+            </div>
+            <div id="content">
+                @RenderBody()
+            </div>
         </div>
-        <div id="content">
-            @RenderBody()
-        </div>
-    </div>
-</body>
+    </body>
 </html>
