Added creating and deleting functionality

--- a/SportsStore.WebUI/Views/Admin/Edit.cshtml
+++ b/SportsStore.WebUI/Views/Admin/Edit.cshtml
@@ -8,7 +8,7 @@
 
 <h2 class="text-muted">Редактировать: <u>@Model.Name</u></h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Admin"))
 {
     <section class="panel panel-info">
         <div class="panel-heading">Информация о товаре:</div>
