--- a/SportsStore.WebUI/Views/Admin/Index.cshtml
+++ b/SportsStore.WebUI/Views/Admin/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using SportsStore.Domain.Entities
+﻿@using Moq
+@using SportsStore.Domain.Entities
 @model IEnumerable<SportsStore.Domain.Entities.Product>
 
 @{
@@ -8,7 +9,7 @@
 
 <h2 class="page-header text-muted">Режим администратора: Список товаров.</h2>
 <p>
-    @Html.ActionLink("Добавить", "Create New", null, new{@class="btn btn-success"})
+    @Html.ActionLink("Добавить", "CreateNew", null, new{@class="btn btn-success"})
 </p>
 <div class="table-responsive" style="margin: auto;">
     <table class="table table-striped" style="margin: auto;">
@@ -38,7 +39,14 @@
                    @item.Price.ToString("c")
                 </td>
                 <td style="width: 100pt; text-align: center;">
-                @Html.ActionLink("Удалить", "Delete", new { id = item.ProductID }, new{ @class = "btn btn-danger", style="margin-bottom: 5pt;" })
+                    
+                    @using (Html.BeginForm("Delete", "Admin"))
+                    {
+                        @Html.Hidden("ProductId", item.ProductID)
+                        <input type="submit" value="Удалить" class = "btn btn-danger" style="margin-bottom: 5pt;" />
+                    }
+
+                   
                 </td>
             </tr>
         }
