--- a/SportsStore.WebUI/Views/Admin/Index.cshtml
+++ b/SportsStore.WebUI/Views/Admin/Index.cshtml
@@ -9,7 +9,7 @@
 
 <h2 class="page-header text-muted">Режим администратора: Список товаров.</h2>
 <p>
-    @Html.ActionLink("Добавить", "CreateNew", null, new{@class="btn btn-success"})
+   <span class="glyphicon glyphicon-plus"></span>&nbsp;@Html.ActionLink("Добавить товар", "CreateNew", null, new{@class="btn btn-success"})
 </p>
 <div class="table-responsive" style="margin: auto;">
     <table class="table table-striped" style="margin: auto;">
