--- a/SportsStore.WebUI/Content/Site.css
+++ b/SportsStore.WebUI/Content/Site.css
@@ -5,13 +5,15 @@
     background-color: #7fffd4;
     background-image: url(images/sports.png);
 }
+
 .product .btn {
-    cursor: pointer !important;   
+    cursor: pointer !important;
 }
 
-.product :hover{
+.product :hover {
     cursor: move;
 }
+
 #menuHome {
     background-image: url(images/лого.png);
     background-size: 80% 100%;
@@ -29,8 +31,38 @@
     min-height: 500pt;
 }
 
+.captionOrange, .captionBlack {
+    color: #fff;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.captionOrange {
+    background: #EB5100;
+    background-color: rgba(235, 81, 0, 0.6);
+}
+
+.captionBlack {
+    font-size: 16px;
+    background: #000;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+a.captionOrange, A.captionOrange:active, A.captionOrange:visited {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+    a.captionOrange:hover {
+        color: #eb5100;
+        text-decoration: underline;
+        background-color: #eeeeee;
+        background-color: rgba(238, 238, 238, 0.7);
+    }
+
 #cart {
-    
 }
 
 @media screen (min-width: 400px) {
@@ -38,13 +70,14 @@
         width: 100%;
     }
 }
+
 .animated-product {
     visibility: hidden;
 }
 
 .carousel-control {
     top: 40%;
-    border:3px solid #ffffff;
+    border: 3px solid #ffffff;
     border-radius: 23px;
     width: 40px;
     height: 40px;
