--- a/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
@@ -1,9 +1,12 @@
-﻿@model SportsStore.Domain.Entities.Product
+﻿@using SportsStore.Domain.Entities
+@using WebGrease.Css.Extensions
+@model SportsStore.Domain.Entities.Product
 
-<div class="product animated-product thumbnail col-md-4 col-xs-12 pull-left ui-widget" style="margin: 8pt;">
+<div class="product animated-product thumbnail col-md-4 col-xs-12 pull-left ui-widget" 
+    style="margin: 8pt; ">
     <h3>@Model.Name</h3>
     @Model.Description
-    <div class="caption">
+    <div class="caption" style="background-image: url( @if(Model.ImageData!=null){@Url.Action("GetImage", "Product", new{Model.ProductID})} ); background-size: cover;" >
     @using(Html.BeginForm("AddToCart", "Cart"))
     {
         @Html.HiddenFor(x => x.ProductID)
