--- a/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -13,6 +13,7 @@
     <script src="~/Scripts/jquery-ui-1.11.4.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/bootstrap.file-input.js"></script>
     <script>
         $(function () {
             var myHandler = function () {
@@ -22,6 +23,10 @@
                 $('body').on('DOMNodeInserted', ".field-validation-error", myHandler);
             };
             $('body').on('DOMNodeInserted', ".field-validation-error", myHandler);
+
+            $("input[type='text'], textarea, input[type='password']").addClass("form-control");
+            $(".editor-label label").addClass("input-group-addon");
+            $("input[type=file]").bootstrapFileInput();
         });
     </script>
 </head>
