--- a/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -32,7 +32,10 @@
 </head>
 <body>
     <div id="container">
-        
+        @if (TempData["message"] != null)
+        {
+            <div class="alert alert-success">@TempData["message"]</div>
+        }
         <div id="content">
             @RenderBody()
         </div>
