--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
     <link href="~/Content/Site.css" type="text/css" rel="stylesheet" />
     <link href="~/Content/animations.css" type="text/css" rel="stylesheet" />
-    <script src="~/Scripts/jquery-ui-1.11.4.js" type="text/javascript"></script>
+    <!--script src="~/Scripts/jquery-ui-1.11.4.js" type="text/javascript"></script-->
     <script src="~/Scripts/jquery-ui-1.11.4.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="~/Scripts/jssor.js"></script>
 
